# etovm

./: .gitignore  ARCHITECTURE.md
docs/: COMMONWARE_INTEGRATION_PLAN.md
svm-subnet/: .gitignore  CLAUDE.md  Makefile  PLAN.MD  README.md  go.mod  go.sum
svm-subnet/cmd/genesis/: main.go
svm-subnet/cmd/rpc-test/: main.go
svm-subnet/cmd/svm/: main.go
svm-subnet/genesis/: genesis.go  genesis.json
svm-subnet/rpc/: evm_backend.go  evm_handlers.go  server.go  solana_handlers.go
svm-subnet/runtime/: Cargo.toml  README.md  build.rs  cbindgen.toml
svm-subnet/runtime/docs/: ARCHITECTURE.md  BENCHMARKS.md  OPTIMIZATION.md
svm-subnet/runtime/src/: accounts.rs  error.rs  executor.rs  hybrid.rs  lib.rs  qmdb_state.rs  real_qmdb_state.rs  runtime.rs
svm-subnet/runtime/src/bpf/: interpreter.rs  memory.rs  mod.rs  syscalls.rs
svm-subnet/runtime/src/evm/: bridge.rs  executor.rs  mod.rs  precompiles.rs  state.rs
svm-subnet/runtime/src/gpu/: batch.rs  merkle.rs  mod.rs  signatures.rs
svm-subnet/runtime/src/hiperf/: batch_verifier.rs  cuda_ed25519.rs  cuda_executor.rs  fafo_scheduler.rs  fast_scheduler.rs  gpu_verifier.rs  incremental_merkle.rs  memory_pool.rs  mod.rs  parallel_merkle.rs  pipeline.rs  pipelined_executor.rs  preverify_mempool.rs  simd_hash.rs  streaming_scheduler.rs  turbo_executor.rs
svm-subnet/runtime/src/programs/: associated_token.rs  bpf_loader.rs  mod.rs  stake.rs  system.rs  token.rs  vote.rs
svm-subnet/runtime/src/sealevel/: access_set.rs  account_locks.rs  batch_scheduler.rs  benchmark.rs  conflict_graph.rs  mod.rs  parallel_executor.rs  qmdb_executor.rs
svm-subnet/runtime/src/sysvars/: clock.rs  epoch_schedule.rs  fees.rs  mod.rs  rent.rs
svm-subnet/runtime/src/types/: account.rs  instruction.rs  mod.rs  pubkey.rs  transaction.rs
svm-subnet/scripts/: build.sh  install-plugin.sh  run-local.sh  run-standalone.sh  setup-local-subnet.sh  test.sh
svm-subnet/test/: integration_test.go  vm_init_test.go
svm-subnet/tools/: e2e_benchmark.go
svm-subnet/vm/: block.go  config.go  factory.go  mempool.go  rpc_handler.go  state.go  tx.go  vm.go
svm-subnet/vm/ffi/: hybrid.go  qmdb.go  runtime.go  sealevel.go  turbo.go  types.go
